// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Anchor bounds demo works fine 1`] = `
<div
  class="anchor-demo"
  id="http://example.com#bounds"
>
  <div
    class="t-anchor t-size-m"
  >
    <div
      class="t-anchor_line"
    />
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#http://example.com#default"
        target="_self"
        title="默认"
      >
        默认
      </a>
    </div>
     
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#http://example.com#bounds"
        target="_self"
        title="滚动区域判断"
      >
        滚动区域判断
      </a>
    </div>
     
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#http://example.com#container"
        target="_self"
        title="自定义滚动区"
      >
        自定义滚动区
      </a>
    </div>
     
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#http://example.com#anchor-target"
        target="_self"
        title="联动anchor-target"
      >
        联动anchor-target
      </a>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#http://example.com#anchor-target-1"
          target="_self"
          title="创建签名"
        >
          创建签名
        </a>
      </div>
       
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#http://example.com#anchor-target-2"
          target="_self"
          title="创建内容的正式模板并保存"
        >
          创建内容的正式模板并保存
        </a>
      </div>
       
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#http://example.com#anchor-target-3"
          target="_self"
          title="为什么账户有余额, 但是发送短信返回1031错误码, 超过会省略省略省略省略?"
        >
          为什么账户有余额, 但是发送短信返回1031错误码, 超过会省略省略省略省略?
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Anchor container demo works fine 1`] = `
<div
  class="anchor-demo anchor-container-demo"
  id="http://example.com#container"
>
  <div
    class="t-anchor t-size-m"
    id="http://example.com#default"
  >
    <div
      class="t-anchor_line"
    />
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#http://example.com#content-1"
        target="_self"
        title="content-1"
      >
        content-1
      </a>
    </div>
     
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#http://example.com#content-2"
        target="_self"
        title="content-2"
      >
        content-2
      </a>
    </div>
     
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#http://example.com#content-3"
        target="_self"
        title="content-3"
      >
        content-3
      </a>
    </div>
     
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#http://example.com#content-4"
        target="_self"
        title="content-4"
      >
        content-4
      </a>
    </div>
  </div>
   
  <div
    id="anchor-container"
  >
    <div
      class="anchor-content-1"
      id="http://example.com#content-1"
    >
      anchor-content-1
    </div>
     
    <div
      class="anchor-content-2"
      id="http://example.com#content-2"
    >
      anchor-content-2
    </div>
     
    <div
      class="anchor-content-3"
      id="http://example.com#content-3"
    >
      anchor-content-3
    </div>
     
    <div
      class="anchor-content-4"
      id="http://example.com#content-4"
    >
      anchor-content-4
    </div>
     
    <div
      class="anchor-content-5"
      id="http://example.com#content-5"
    >
      anchor-content-5
    </div>
  </div>
</div>
`;

exports[`Anchor default demo works fine 1`] = `
<div
  class="anchor-demo"
  id="http://example.com#default"
>
  <div
    class="t-anchor t-size-m"
  >
    <div
      class="t-anchor_line"
    />
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#http://example.com#default"
        target="_self"
        title="默认"
      >
        默认
      </a>
    </div>
     
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#http://example.com#bounds"
        target="_self"
        title="滚动区域判断"
      >
        滚动区域判断
      </a>
    </div>
     
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#http://example.com#container"
        target="_self"
        title="自定义滚动区"
      >
        自定义滚动区
      </a>
    </div>
     
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#http://example.com#anchor-target"
        target="_self"
        title="联动anchor-target"
      >
        联动anchor-target
      </a>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#http://example.com#anchor-target-1"
          target="_self"
          title="创建签名"
        >
          创建签名
        </a>
      </div>
       
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#http://example.com#anchor-target-2"
          target="_self"
          title="创建内容的正式模板并保存"
        >
          创建内容的正式模板并保存
        </a>
      </div>
       
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#http://example.com#anchor-target-3"
          target="_self"
          title="为什么账户有余额, 但是发送短信返回1031错误码, 超过会省略省略省略省略?"
        >
          为什么账户有余额, 但是发送短信返回1031错误码, 超过会省略省略省略省略?
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Anchor target demo works fine 1`] = `
<div>
  <p
    style="margin-bottom: 40px;"
  >
    
    请点击最上角最后三个锚点查看效果
  
  </p>
   
  <div
    class="anchor-demo"
    id="http://example.com#anchor-target"
  >
    <h1
      class="t-anchor-target"
      id="http://example.com#anchor-target-1"
    >
       创建签名 
      <div
        class="t-popup-reference t-copy"
        style="position: relative;"
      >
         
        <svg
          class="t-icon t-icon-file-copy"
        >
          <use
            xlink:href="#t-icon-file-copy"
          />
        </svg>
        <div
          class="resize-sensor"
          dir="ltr"
          style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
        >
          <div
            class="resize-sensor-expand"
            style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
          >
            <div
              style="position: absolute; left: 0px; top: 0px; transition: 0s;"
            />
          </div>
          <div
            class="resize-sensor-shrink"
            style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
          >
            <div
              style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
            />
          </div>
        </div>
      </div>
    </h1>
     
    <h2
      class="t-anchor-target"
      id="http://example.com#anchor-target-2"
    >
       创建内容的正式模板并保存 
      <div
        class="t-popup-reference t-copy"
        style="position: relative;"
      >
         
        <svg
          class="t-icon t-icon-file-copy"
        >
          <use
            xlink:href="#t-icon-file-copy"
          />
        </svg>
        <div
          class="resize-sensor"
          dir="ltr"
          style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
        >
          <div
            class="resize-sensor-expand"
            style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
          >
            <div
              style="position: absolute; left: 0px; top: 0px; transition: 0s;"
            />
          </div>
          <div
            class="resize-sensor-shrink"
            style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
          >
            <div
              style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
            />
          </div>
        </div>
      </div>
    </h2>
     
    <h3
      class="t-anchor-target"
      id="http://example.com#anchor-target-3"
    >
       为什么账户有余额, 但是发送短信返回1031错误码, 超过会省略省略省略省略?
      <div
        class="t-popup-reference t-copy"
        style="position: relative;"
      >
         
        <svg
          class="t-icon t-icon-file-copy"
        >
          <use
            xlink:href="#t-icon-file-copy"
          />
        </svg>
        <div
          class="resize-sensor"
          dir="ltr"
          style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
        >
          <div
            class="resize-sensor-expand"
            style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
          >
            <div
              style="position: absolute; left: 0px; top: 0px; transition: 0s;"
            />
          </div>
          <div
            class="resize-sensor-shrink"
            style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
          >
            <div
              style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
            />
          </div>
        </div>
      </div>
    </h3>
  </div>
</div>
`;
